--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -364,7 +364,7 @@
 
 
     <!-- Team Start -->
-    {{ render(controller('App\\Controller\\PageController::teamTemplate')) }}
+    {{ include ('partials/_team.html.twig')}}
     <!-- Team End -->
 
 
