--- a/templates/page/about.html.twig
+++ b/templates/page/about.html.twig
@@ -65,6 +65,6 @@
 
 
     <!-- Team Start -->
-    {{ render(controller('App\\Controller\\PageController::teamTemplate')) }}
+    {{ include ('partials/_team.html.twig')}}
     <!-- Team End -->
 {% endblock %}
